--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,58 +6,55 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>723</width>
-    <height>590</height>
+    <width>455</width>
+    <height>397</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QScrollArea" name="scrollArea">
     <property name="geometry">
      <rect>
-      <x>280</x>
-      <y>480</y>
-      <width>75</width>
-      <height>23</height>
+      <x>0</x>
+      <y>0</y>
+      <width>451</width>
+      <height>311</height>
      </rect>
     </property>
-    <property name="text">
-     <string>Zoom In</string>
+    <property name="widgetResizable">
+     <bool>true</bool>
     </property>
+    <widget class="QWidget" name="scrollAreaWidgetContents">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>0</y>
+       <width>449</width>
+       <height>309</height>
+      </rect>
+     </property>
+    </widget>
    </widget>
-   <widget class="QPushButton" name="pushButton_2">
+   <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>350</x>
-      <y>480</y>
-      <width>75</width>
-      <height>23</height>
+      <x>10</x>
+      <y>20</y>
+      <width>46</width>
+      <height>13</height>
      </rect>
     </property>
     <property name="text">
-     <string>Zoom Out</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_3">
-    <property name="geometry">
-     <rect>
-      <x>280</x>
-      <y>510</y>
-      <width>75</width>
-      <height>23</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Previous</string>
+     <string/>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton_4">
     <property name="geometry">
      <rect>
-      <x>350</x>
-      <y>510</y>
+      <x>310</x>
+      <y>320</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -66,68 +63,82 @@
      <string>Next</string>
     </property>
    </widget>
-   <widget class="QGraphicsView" name="graphicsView">
+   <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>0</y>
-      <width>711</width>
-      <height>551</height>
+      <x>160</x>
+      <y>320</y>
+      <width>75</width>
+      <height>23</height>
      </rect>
     </property>
+    <property name="text">
+     <string>-</string>
+    </property>
    </widget>
-   <widget class="QTableView" name="tableView">
+   <widget class="QPushButton" name="pushButton_3">
     <property name="geometry">
      <rect>
       <x>80</x>
-      <y>180</y>
-      <width>256</width>
-      <height>192</height>
+      <y>320</y>
+      <width>75</width>
+      <height>23</height>
      </rect>
     </property>
+    <property name="text">
+     <string>Prev</string>
+    </property>
    </widget>
-   <zorder>graphicsView</zorder>
-   <zorder>pushButton_4</zorder>
-   <zorder>pushButton_3</zorder>
-   <zorder>pushButton_2</zorder>
-   <zorder>pushButton</zorder>
-   <zorder>tableView</zorder>
+   <widget class="QPushButton" name="pushButton_2">
+    <property name="geometry">
+     <rect>
+      <x>240</x>
+      <y>320</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>+</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>723</width>
+     <width>455</width>
      <height>21</height>
     </rect>
    </property>
-   <widget class="QMenu" name="menuOpen">
+   <widget class="QMenu" name="menuFile">
     <property name="title">
      <string>File</string>
     </property>
     <addaction name="actionOpen"/>
-    <addaction name="actionAdd_directory"/>
     <addaction name="actionExit"/>
    </widget>
    <widget class="QMenu" name="menuView">
     <property name="title">
      <string>View</string>
     </property>
-    <addaction name="actionZoom_In"/>
-    <addaction name="actionZoom_Out"/>
-   </widget>
-   <widget class="QMenu" name="menuHelp">
-    <property name="title">
-     <string>Help</string>
-    </property>
+    <addaction name="actionZoomIn"/>
+    <addaction name="actionZoomOut"/>
     <addaction name="separator"/>
-    <addaction name="actionIndex"/>
-    <addaction name="actionAbout"/>
+    <addaction name="actionFitToWindow"/>
+    <addaction name="actionNormal_Size"/>
    </widget>
-   <addaction name="menuOpen"/>
+   <widget class="QMenu" name="menuAbout">
+    <property name="title">
+     <string>About</string>
+    </property>
+    <addaction name="actionHelp"/>
+    <addaction name="actionAbout_Program"/>
+   </widget>
+   <addaction name="menuFile"/>
    <addaction name="menuView"/>
-   <addaction name="menuHelp"/>
+   <addaction name="menuAbout"/>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
    <attribute name="toolBarArea">
@@ -143,34 +154,39 @@
     <string>Open</string>
    </property>
   </action>
-  <action name="actionAdd_directory">
-   <property name="text">
-    <string>Add directory</string>
-   </property>
-  </action>
   <action name="actionExit">
    <property name="text">
     <string>Exit</string>
    </property>
   </action>
-  <action name="actionZoom_In">
+  <action name="actionZoomIn">
    <property name="text">
-    <string>Zoom In</string>
+    <string>ZoomIn</string>
    </property>
   </action>
-  <action name="actionZoom_Out">
+  <action name="actionHelp">
    <property name="text">
-    <string>Zoom Out</string>
+    <string>Help</string>
    </property>
   </action>
-  <action name="actionAbout">
+  <action name="actionAbout_Program">
    <property name="text">
-    <string>About</string>
+    <string>About Program</string>
    </property>
   </action>
-  <action name="actionIndex">
+  <action name="actionZoomOut">
    <property name="text">
-    <string>Index</string>
+    <string>ZoomOut</string>
+   </property>
+  </action>
+  <action name="actionFitToWindow">
+   <property name="text">
+    <string>Fit To Window</string>
+   </property>
+  </action>
+  <action name="actionNormal_Size">
+   <property name="text">
+    <string>Normal Size</string>
    </property>
   </action>
  </widget>
