--- a/ImageViewerUI/mainwindow.ui
+++ b/ImageViewerUI/mainwindow.ui
@@ -26,7 +26,7 @@
          <x>0</x>
          <y>0</y>
          <width>435</width>
-         <height>297</height>
+         <height>277</height>
         </rect>
        </property>
       </widget>
@@ -71,6 +71,13 @@
         </property>
         <property name="maximum">
          <number>10</number>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QCommandLinkButton" name="commandLinkButton">
+        <property name="text">
+         <string/>
         </property>
        </widget>
       </item>
